tests/fail/missing_brackets.stderr
error: More Types than '{}' Placeholders provided
 --> $DIR/missing_brackets.rs:2:43
  |
2 |     sscanf::scanf!("hi", "asdf{}", usize, std::vec::Vec<std::string::String>, u32);
  |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: More Types than '{}' Placeholders provided
 --> $DIR/missing_brackets.rs:2:79
  |
2 |     sscanf::scanf!("hi", "asdf{}", usize, std::vec::Vec<std::string::String>, u32);
  |                                                                               ^^^
